menu header, read menu json, section components

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "floatspa19",
   "version": "0.0.1",
   "description": "float spa 19",
-  "main": "master.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:component": "babel ./components --out-dir ./build",
@@ -31,6 +31,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "prop-types": "^15.6.1",
     "webpack": "^3.8.1"
   }
