--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "description": "float spa 19",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+  "scripts": {    
     "build:component": "babel ./components --out-dir ./build",
     "build:cssdev": "sass scss/master.scss css/master.min.css",
     "build:css": "sass scss/master.scss css/master.min.css -t compressed",
     "build:packdev": "webpack --progress",
-    "build:pack": "webpack --progress -p"
+    "build:pack": "webpack --progress -p",
+    "build:dev":"yarn build:cssdev && yarn build:packdev",
+    "build":"yarn build:css && yarn build:pack"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "prop-types": "^15.6.1",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
